Style: Remove fixed position from footer (taking up too much real estate)

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -278,7 +278,7 @@ footer {
     width: 100%; 
     left: 0;
     bottom: 0;
-    position: fixed;
+    
     margin-right: auto;
     margin-left: auto;
 }
